# heart-failure-survival-analysis

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: 01_eda.ipynb  02_survival_prep.ipynb  03_Kaplan_Meier_Analysis.ipynb  04_log_rank.ipynb
